Add currency change API

--- a/public/product/product.css
+++ b/public/product/product.css
@@ -21,3 +21,9 @@
 .prodPriceAndBuy {
     margin: 15px 0;
 }
+
+.changeCurrencyDiv {
+    display: inline-block;
+    font-size: smaller;
+    margin-left: 20px;
+}
