--- a/public/layout/header/header.html
+++ b/public/layout/header/header.html
@@ -12,7 +12,7 @@
             <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <a href="/" class="nav-link px-2 text-white">Home</a>
                 <a href="/branchesPage" class="nav-link px-2 text-white">Branches</a>
-                <a href="#" class="nav-link px-2 text-white">Purchase History</a>
+                <a href="/purchaseHistoryPage" class="nav-link px-2 text-white">Purchase History</a>
             </nav>
 
             <div class="col-md-3 text-end">
