Make branches with websocket and add search by name

--- a/public/branchesPage/index.css
+++ b/public/branchesPage/index.css
@@ -7,3 +7,12 @@
 .container {
     text-align: center;
 }
+
+#branchSearch {
+    width: 40%;
+    display: inline;
+}
+
+#searchBtn {
+    margin-left: 10px;
+}
