--- a/public/index.css
+++ b/public/index.css
@@ -7,8 +7,10 @@
     object-fit: contain;
 }
 .prodImgContainer {
-    width: 100%;
-    aspect-ratio: 12/9;
+}
+.innerImgContainer {
+    aspect-ratio: 1/1;
+    background-color: #f6f6f6;
 }
 
 .cartInBuyBtn {
