--- a/public/layout/header/header.html
+++ b/public/layout/header/header.html
@@ -6,16 +6,18 @@
 
 <header class="p-3 bg-dark text-white">
     <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-between">
             <span class="fs-4">ShopName</span>
 
-            <nav class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <nav class="nav col-12 col-lg-auto mb-2 justify-content-center mb-md-0">
                 <a href="/" class="nav-link px-2 text-white">Home</a>
                 <a href="/branchesPage" class="nav-link px-2 text-white">Branches</a>
                 <a href="/purchaseHistoryPage" class="nav-link px-2 text-white">Purchase History</a>
+                <a href="/adminInventory" class="nav-link px-2 text-white adminLinks hidden">Inventory</a>
+                <a href="/admingraphs" class="nav-link px-2 text-white adminLinks hidden">Graphs</a>
             </nav>
 
-            <div class="col-md-3 text-end">
+            <div class="col-lg-3 text-end">
                 <button type="button" class="btn btn-outline-light me-2" onclick="window.location.href='/cart'">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                         <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
