Fix admin graph link in headers

--- a/public/layout/header/header.html
+++ b/public/layout/header/header.html
@@ -14,7 +14,7 @@
                 <a href="/branchesPage" class="nav-link px-2 text-white">Branches</a>
                 <a href="/purchaseHistoryPage" class="nav-link px-2 text-white">Purchase History</a>
                 <a href="/adminInventory" class="nav-link px-2 text-white adminLinks hidden">Inventory</a>
-                <a href="/admingraphs" class="nav-link px-2 text-white adminLinks hidden">Graphs</a>
+                <a href="/adminGraph" class="nav-link px-2 text-white adminLinks hidden">Graphs</a>
             </nav>
 
             <div class="col-lg-3 text-end">
