Add favicon and title

--- a/public/layout/header/header.html
+++ b/public/layout/header/header.html
@@ -7,7 +7,7 @@
 <header class="p-3 bg-dark text-white">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-between">
-            <span class="fs-4">ShopName</span>
+            <span class="fs-4">ShoesShop</span>
 
             <nav class="nav col-12 col-lg-auto mb-2 justify-content-center mb-md-0">
                 <a href="/" class="nav-link px-2 text-white">Home</a>
