--- a/public/layout/footer/footer.html
+++ b/public/layout/footer/footer.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/layout/footer/footer.css">
 <footer class="footer">
   <div class="container">
-    <span class="text-muted">ShopName ©</span>
+    <span class="text-muted">ShoesShop ©</span>
   </div>
 </footer>
